tests/errors/compiler/decl_and_def_have_diff_type/int_decl_float_def.c
int fun();

int main()
{
	fun();
	return 0;
}

float fun()
{

}
